# axum_tut

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  resources.rs  task_rpc.rs
crates/libs/lib-rpc/src/router/: from_resources.rs  into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: project_rpc.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  time.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_resp_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  hello.rs  log.rs  main.rs  model.rs  mw_auth.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_resp_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs  params.rs  task_rpc.rs
tests/: quick_dev.rs
web_folder/: index.html
