[package]
name = "axum_tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
# Serde
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# Axum
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
# Others
lazy-regex = "3.0.1"
async-trait = "0.1.73"
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
