[package]
name = "axum_tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Axum
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# SQL 
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = [
  "sqlx-postgres",
  "with-uuid",
] }
modql = { version = "0.3.10", features = ["with-sea-query"] }
# Tracing 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Crypt and encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
# Others
time = "0.3"
async-trait = "0.1.73"
strum_macros = "0.25.2"
chrono = "0.4.31"
derive_more = "0.99"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "3"
