[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core/" }
# async
futures = "0.3"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Data
modql = { version = "0.3", features = ["with-sea-query"] }
# Others
derive_more = "0.99"

[dev-dependencies]
anyhow = "1"
