[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { path = "../../libs/lib-core/" }
lib-utils = { path = "../../libs/lib-utils/" }
lib-auth = { path = "../../libs/lib-auth/" }
lib-rpc = { path = "../../libs/lib-rpc/" }


tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Axum
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# # Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.26"
derive_more = "0.99"
chrono = "0.4"

[dev-dependencies]
anyhow = "1"
serial_test = "3"
httpc-test = "0.1"
